[gd_scene load_steps=5 format=3 uid="uid://oibmc5lox2lr"]

[ext_resource type="Script" uid="uid://s5axejy586hs" path="res://scripts/custom_level.gd" id="1_w1nej"]
[ext_resource type="Texture2D" uid="uid://dyk4x1whvd7sn" path="res://sprites/ui/pen_icon.svg" id="2_ja577"]
[ext_resource type="Texture2D" uid="uid://12awdfffw5ou" path="res://sprites/ui/trash_icon.svg" id="3_w2108"]
[ext_resource type="Texture2D" uid="uid://dlnte6y5vpy5t" path="res://sprites/ui/gear_icon.svg" id="4_xvdse"]

[node name="CustomLevel" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_w1nej")

[node name="TitleMargins" type="MarginContainer" parent="."]
layout_mode = 2

[node name="TitleEdit" type="LineEdit" parent="TitleMargins"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TitleMargins"]
unique_name_in_owner = true
layout_mode = 2

[node name="RenameButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_ja577")
expand_icon = true

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_w2108")
expand_icon = true

[node name="EditButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("4_xvdse")
expand_icon = true

[connection signal="text_submitted" from="TitleMargins/TitleEdit" to="." method="_on_title_text_submitted"]
[connection signal="pressed" from="RenameButton" to="." method="_on_rename_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
